fixed image squeeze on mobile

--- a/assets/css/images.css
+++ b/assets/css/images.css
@@ -15,6 +15,9 @@ img  {
     object-fit: cover;
 }
 
+.small-gap img{
+    object-fit: cover;
+}
 @media  (min-width: 0px) and (max-width: 1100px){
     .long-image {
         width: 100%;
